// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`NextDrupalHealthCheck > should pass for a valid BACKEND_URL and invalid auth 1`] = `
[
  "No .env* file found, assuming production environment.",
  "Checking for PANTHEON_CMS_ENDPOINT or BACKEND_URL...",
  "|__✅ BACKEND_URL is set!",
  "Validating CMS endpoint...",
  "|__✅ BACKEND_URL is valid!",
  "Validating Menu Item endpoint...",
  "|__✅ Menu Items endpoint is valid!",
  "|__✅ Decoupled Router is valid!",
  "Validating authentication...",
  "|__💡 CLIENT_ID is required for preview but is not set.",
  "|____ Get the CLIENT_ID here: 🔗 https://drupal.test/admin/config/services/consumer",
  "|__💡 CLIENT_SECRET is required for preview but is not set.",
  "|____ Set a new CLIENT_SECRET here by clicking edit: 🔗 https://drupal.test/admin/config/services/consumer",
  "|__💡 Auth not valid.",
  "|____ Ensure the CLIENT_ID and CLIENT_SECRET are correct.",
  "⏭  Skipping preview endpoint validation -- authorization required.",
]
`;

exports[`NextDrupalHealthCheck > should pass for a valid PANTHEON_CMS_ENDPOINT and invalid auth 1`] = `
[
  "No .env* file found, assuming production environment.",
  "Checking for PANTHEON_CMS_ENDPOINT or BACKEND_URL...",
  "|__✅ PANTHEON_CMS_ENDPOINT is set!",
  "Validating CMS endpoint...",
  "|__✅ PANTHEON_CMS_ENDPOINT is valid!",
  "Validating Menu Item endpoint...",
  "|__✅ Menu Items endpoint is valid!",
  "|__✅ Decoupled Router is valid!",
  "Validating authentication...",
  "|__💡 CLIENT_ID is required for preview but is not set.",
  "|____ Get the CLIENT_ID here: 🔗 https://drupal.test/admin/config/services/consumer",
  "|__💡 CLIENT_SECRET is required for preview but is not set.",
  "|____ Set a new CLIENT_SECRET here by clicking edit: 🔗 https://drupal.test/admin/config/services/consumer",
  "|__💡 Auth not valid.",
  "|____ Ensure the CLIENT_ID and CLIENT_SECRET are correct.",
  "⏭  Skipping preview endpoint validation -- authorization required.",
]
`;

exports[`NextDrupalHealthCheck > should pass for a valid backend and valid auth 1`] = `
[
  "No .env* file found, assuming production environment.",
  "Checking for PANTHEON_CMS_ENDPOINT or BACKEND_URL...",
  "|__✅ PANTHEON_CMS_ENDPOINT is set!",
  "Validating CMS endpoint...",
  "|__✅ PANTHEON_CMS_ENDPOINT is valid!",
  "Validating Menu Item endpoint...",
  "|__✅ Menu Items endpoint is valid!",
  "|__✅ Decoupled Router is valid!",
  "Validating authentication...",
  "|__✅ Auth is valid!",
  "Checking for PREVIEW_SECRET...",
  "|__✅ PREVIEW_SECRET is set.",
  "|__✅ Preview is valid!",
]
`;

exports[`NextDrupalHealthCheck > should pass for a valid backend and valid auth but no preview secret 1`] = `
[
  "No .env* file found, assuming production environment.",
  "Checking for PANTHEON_CMS_ENDPOINT or BACKEND_URL...",
  "|__✅ PANTHEON_CMS_ENDPOINT is set!",
  "Validating CMS endpoint...",
  "|__✅ PANTHEON_CMS_ENDPOINT is valid!",
  "Validating Menu Item endpoint...",
  "|__✅ Menu Items endpoint is valid!",
  "|__✅ Decoupled Router is valid!",
  "Validating authentication...",
  "|__✅ Auth is valid!",
  "Checking for PREVIEW_SECRET...",
  "|__💡 PREVIEW_SECRET env var is not set.",
  "|____ To set a new secret, go to 🔗 https://drupal.test/admin/structure/dp-preview-site and edit the preview site you want to use.",
  "⏭  Skipping preview endpoint validation -- PREVIEW_SECRET required.",
]
`;

exports[`NextDrupalHealthCheck > should show a helpful error message if the backend is invalid 1`] = `
[
  "No .env* file found, assuming production environment.",
  "Checking for PANTHEON_CMS_ENDPOINT or BACKEND_URL...",
  "|__✅ PANTHEON_CMS_ENDPOINT is set!",
  "Validating CMS endpoint...",
  "|__❌ PANTHEON_CMS_ENDPOINT could not be fetched from.
Check that invalid.drupal.test is valid and provides a 200 response",
]
`;
